packages/ses/test/error/issue-2941/test3/error-trapping-platform-safe.demo.js
import '../../../../index.js';

lockdown({
  errorTaming: 'safe',
  stackFiltering: 'concise',
  errorTrapping: 'platform',
});

try {
  throw Error(`karramba`);
} catch (e) {
  throw Error('que?', { cause: e });
}
